Adjustments for github workspace